--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,7 @@
 body {
     font-family: "Roboto", sans-serif;
-    color: #2e2f42;
+    color: #434455;
+    background-color: #FFFFFF;
 }
 
 ul {
@@ -25,33 +26,25 @@ a {
     overflow: hidden;
 }
 
-.section-title {
-    font-weight: 700;
-    font-size: 36px;
-    line-height: 1.11;
-    letter-spacing: 0.02em;
-    text-align: center;
-}
-
 .section-subtitle {
     font-weight: 500;
     font-size: 20px;
     line-height: 1.2;
     letter-spacing: 0.02em;
+    color: #2e2f42;
 }
 
 .section-text {
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
-    color: #434455;
 }
 
 .general-logo {
-
+    font-family: "Raleway", sans-serif;
     font-weight: 700;
     font-size: 18px;
-    line-height: 1.16667;
+    line-height: 1.17;
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: #4d5ae5;
@@ -99,14 +92,14 @@ a {
 .header-address-item {}
 
 .header-address-link {
+    font-weight: 400;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #434455;
 }
 
-.header-address-link:hover,
-.header-address-link:focus {
+.header-address-link:hover {
     color: #404bbf;
 }
 
@@ -120,7 +113,7 @@ a {
 .main-title {
     font-weight: 700;
     font-size: 56px;
-    line-height: 1.07143;
+    line-height: 1.07;
     letter-spacing: 0.02em;
     text-align: center;
     color: #fff;
@@ -133,7 +126,12 @@ a {
     line-height: 1.5;
     letter-spacing: 0.04em;
     color: #fff;
-    cursor: pointer;
+    background-color: #4D5AE5;
+}
+
+.main-btn:hover,
+.main-btn:focus {
+    color: #404BBF;
 }
 
 /* --------------------section-advantages----------------------- */
@@ -158,9 +156,19 @@ a {
     background: #f4f4fd;
 }
 
-.ourteam-title {}
+.ourteam-title {
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.11;
+    letter-spacing: 0.02em;
+    text-align: center;
+    color: #2e2f42;
+    text-transform: capitalize;
+}
 
-.ourteam-list {}
+.ourteam-list {
+    background-color: #FFFFFF;
+}
 
 .ourteam-item {}
 
@@ -170,7 +178,7 @@ a {
     line-height: 1.2;
     letter-spacing: 0.02em;
     text-align: center;
-
+    color: #2e2f42;
 }
 
 .ourteam-text {
@@ -178,7 +186,6 @@ a {
     line-height: 1.5;
     letter-spacing: 0.02em;
     text-align: center;
-    color: #434455;
 }
 
 .ourteam-image {}
@@ -189,7 +196,15 @@ a {
     background: #fff;
 }
 
-.ourportfolio-title {}
+.ourportfolio-title {
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.11;
+    letter-spacing: 0.02em;
+    text-align: center;
+    color: #2e2f42;
+    text-transform: capitalize
+}
 
 .ourportfolio-list {}
 
@@ -213,13 +228,14 @@ a {
 .footer-logo span {
     font-weight: 700;
     font-size: 18px;
-    line-height: 1.16667;
+    line-height: 1.17;
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: #f4f4fd;
 }
 
 .footer-text {
+    font-weight: 400;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
