--- a/css/styles.css
+++ b/css/styles.css
@@ -143,7 +143,7 @@ a {
 /* --------------------section-ourteam----------------------- */
 
 .section-ourteam {
-    background-color: #FFFFFF;
+    background-color: #F4F4FD;
 }
 
 .ourteam-title {
